files/sdr/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rtlsdr-allow
  namespace: pods
spec:
  podSelector:
    matchLabels:
      app: rtl-sdr
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 1234
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
        - ipBlock:
            cidr: 10.96.0.0/12
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
